--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -150,14 +150,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBoxPlayMode">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-         </widget>
+         <widget class="QComboBox" name="comboBoxPlayMode"/>
         </item>
        </layout>
       </item>
