--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -84,6 +84,9 @@
         <file alias="qtbase_pt.qm">../../translations/Qt/qtbase_pt.qm</file>
     </qresource>
     <qresource prefix="/images">
+        <file>loop.png</file>
+        <file>rec.png</file>
+        <file>play.png</file>
         <file>wave_normal.png</file>
         <file>wave_pixelated.png</file>
         <file>wave_buildings.png</file>
@@ -114,9 +117,6 @@
         <file>mini arrow right.png</file>
         <file>mini arrow left hover.png</file>
         <file>mini arrow right hover.png</file>
-        <file>rec maginifier.png</file>
-        <file>rec off.png</file>
-        <file>rec on.png</file>
         <file>translate.png</file>
         <file>warning.png</file>
         <file>chat_small.png</file>
