--- a/src/resources/css/themes/Rounded/Dialogs.css
+++ b/src/resources/css/themes/Rounded/Dialogs.css
@@ -12,6 +12,13 @@ MidiToolsDialog
     border-radius: 2px;
 }
 
+LooperWindow
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0     rgb(180, 180, 180),
+        stop: 1.0   rgb(150, 150, 150));
+}
+
 PluginScanDialog
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
