--- a/src/resources/css/themes/Black_nm/LocalTrack.css
+++ b/src/resources/css/themes/Black_nm/LocalTrack.css
@@ -188,3 +188,9 @@ LocalTrackViewStandalone
 {
     qproperty-midiRoutingArrowColor: rgba(255, 255, 255, 80);
 }
+
+LocalTrackView #buttonLooper:disabled
+{
+    border: none;
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
+}
