--- a/src/resources/css/themes/Flat/LocalTrack.css
+++ b/src/resources/css/themes/Flat/LocalTrack.css
@@ -125,3 +125,9 @@ LocalTrackView #inputPanel:hover
     background-color: rgb(255, 40, 40);
     border-color: rgba(0, 0, 0, 90);
 }
+
+LocalTrackView #buttonLooper:disabled
+{
+    border: none;
+    background-color: rgb(250, 250, 250);
+}
