--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -137,6 +137,7 @@
         <file>low_cut_off.png</file>
         <file>low_cut_normal.png</file>
         <file>low_cut_drastic.png</file>
+        <file>delete_layer.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
