--- a/src/resources/css/themes/Flat/LocalTrack.css
+++ b/src/resources/css/themes/Flat/LocalTrack.css
@@ -106,6 +106,7 @@ LocalTrackView #inputPanel:hover
 #xmitButton[preparing="true"]
 {
     background-color: rgb(255, 255, 0);
+    color: black;
 }
 
 #xmitButton:!checked
