--- a/src/resources/css/themes/Rounded/LocalTrack.css
+++ b/src/resources/css/themes/Rounded/LocalTrack.css
@@ -70,6 +70,7 @@ FxPanelItem QPushButton:checked
 #xmitButton[preparing="true"]
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255,255,0), stop:1 rgb(204,204,0));
+    color: rgb(20, 20, 20);
 }
 
 #xmitButton:!checked
