--- a/src/resources/css/themes/Volcano_nm/LocalTrack.css
+++ b/src/resources/css/themes/Volcano_nm/LocalTrack.css
@@ -111,6 +111,7 @@ LocalTrackView[unlighted="true"] #inputPanel:hover
 #xmitButton[preparing="true"]
 {
     background-color: rgb(255, 255, 0);
+    color: black;
 }
 
 #xmitButton:!checked
