Rounded theme boost bttn non-xmit unchk color fix

--- a/src/resources/css/themes/Rounded/LocalTrack.css
+++ b/src/resources/css/themes/Rounded/LocalTrack.css
@@ -135,3 +135,9 @@ LocalTrackView[unlighted="true"] #buttonLooper:disabled
     background-color: rgba(0, 0, 0, 30);
     border: none;
 }
+
+LocalTrackView[unlighted="true"] #buttonBoost:!checked
+{
+    background-color: rgba(0, 0, 0, 30);
+    border: none;
+}
