--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -138,6 +138,8 @@
         <file>low_cut_normal.png</file>
         <file>low_cut_drastic.png</file>
         <file>delete_layer.png</file>
+        <file>save.png</file>
+        <file>load.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
