--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -298,11 +298,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="maxLayersSpinBox">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-         </widget>
+         <widget class="QComboBox" name="maxLayersComboBox"/>
         </item>
        </layout>
       </item>
